--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>INDRA Interactive Map</title>
     <!-- CSS -->
     <link href="static/style.css" rel="stylesheet" type="text/css" />
-
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <!-- bower:css -->
     <link rel="stylesheet" href="static/bower_components/qtip2/jquery.qtip.min.css" />
     <link rel="stylesheet" href="static/bower_components/bootstrap/dist/css/bootstrap.css" />
@@ -70,7 +70,7 @@
 
     <div class=row>
         <div class="col-sm-6 col-xs-6 padding-0">
-            <img src="indra_logo_v2.png" alt="INDRA logo" style="height:30px;"></img> <span class="hidden-xs" style="font:30px bold;text-align: center; vertical-align: middle;">INDRA-IPM</span>
+            <img src="indra_logo_v2.png" alt="INDRA logo" style="height:30px;"></img> <span class="hidden-xs" style="font:30px bold;text-align: center; vertical-align: middle;font-family: Roboto, sans-serif; ">INDRA-IPM</span>
         </div>
         <!-- <div class="col-sm-4 col-xs-4 hidden-xs pull-left padding-0" style="font:30px bold;">INDRA-IPM</div> -->
       <div class='col-sm-6 col-xs-6 pull-right'>
